# better-transcribe

./: .gitignore  INSTALL_AGENT_PROMPT.md  README.md  pyproject.toml  requirements.txt
bettertranscribe/: __init__.py  asr.py  cli.py  device.py  diarize.py  fetch.py  formats.py  ids.py  library.py  postprocess.py
tests/: test_device.py  test_diarize.py  test_e2e_asr.py  test_formats.py  test_ids.py  test_library.py  test_postprocess.py  test_wer_regression.py
tests/fixtures/: captions_excerpt.txt  whisper_excerpt.txt
