[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "better-transcribe"
version = "0.2.0"
description = "Local speech-to-text that beats YouTube auto-captions (faster-whisper + hallucination guards + diarization)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "za3ter123" }]
keywords = ["whisper", "transcription", "speech-to-text", "youtube", "subtitles"]
dependencies = [
    "faster-whisper>=1.0",
    "yt-dlp>=2024.0",
]

[project.optional-dependencies]
# GPU on NVIDIA (Windows/Linux). Not needed on CPU or Apple Silicon.
cuda = ["nvidia-cublas-cu12", "nvidia-cudnn-cu12"]
# Speaker diarization. Also requires accepting the pyannote model terms on HF.
diarize = ["pyannote.audio>=3.1", "torch>=2.0"]
# Apple Silicon accelerated backend.
mlx = ["mlx-whisper>=0.3"]
dev = ["pytest>=7.0"]

[project.scripts]
betterscribe = "bettertranscribe.cli:main"

[project.urls]
Homepage = "https://github.com/za3ter123/better-transcribe"
Issues = "https://github.com/za3ter123/better-transcribe/issues"

[tool.setuptools.packages.find]
include = ["bettertranscribe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
